--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">rutdomandroid</string>
+    <string name="time_value1">10:00-11:00</string>
+    <string name="time_value2">11:00-12:00</string>
+    <string name="time_value3">12:00-13:00</string>
+    <string name="time_value4">13:00-14:00</string>
+    <string name="time_value5">14:00-15:00</string>
+    <string name="time_value6">15:00-16:00</string>
+    <string name="time_value7">16:00-17:00</string>
+    <string name="time_value8">17:00-18:00</string>
+    <string name="time_value9">18:00-19:00</string>
+    <string name="time_value10">19:00-20:00</string>
+
+
 </resources>
