--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
 
     </string-array>
 
-    <string name="app_name">rutdomandroid</string>
+    <string name="app_name">Мой дом</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="infoTitle">Информация</string>
